# MyWebsite

./: README.md  app.py  pyproject.toml
pages/: blog.py  contact.py  cv.py  home.py
